PageContentNavigation: Fix cut off text (#2857)

--- a/src/MudBlazor/Styles/components/_pagecontentnavigation.scss
+++ b/src/MudBlazor/Styles/components/_pagecontentnavigation.scss
@@ -25,6 +25,9 @@
             .mud-nav-link-text {
                 margin-left: 0px;
                 margin-inline-start: 0px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
         }
     }
